--- a/ready/lesson3.html
+++ b/ready/lesson3.html
@@ -4,8 +4,8 @@
 <head>
     <meta charset="utf-8">
 
-    <!--<script src="https://ajax.googleapis.com./ajax/libs/jquery/1.12.1/jquery.min.js"></script>
-    <link rel="stylesheet" href="jquery-ui-1.12.1.custom/jquery-ui-1.12.1.custom/jquery-ui.css">
+    <script src="https://ajax.googleapis.com./ajax/libs/jquery/1.12.1/jquery.min.js"></script>
+    <!--<link rel="stylesheet" href="jquery-ui-1.12.1.custom/jquery-ui-1.12.1.custom/jquery-ui.css">
     <script src="jquery-ui-1.12.1.custom/jquery-ui-1.12.1.custom/jquery-ui.js"></script>-->
 
     <link rel="stylesheet" href="https://code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
