--- a/ready/lesson3.html
+++ b/ready/lesson3.html
@@ -130,7 +130,7 @@
 
 <style>
         body {
-            background: url(https://funart.pro/uploads/posts/2021-04/1618491900_26-funart_pro-p-oboi-fon-anime-devushki-28.jpg);
+            background: url("https://funart.pro/uploads/posts/2021-04/1618491900_26-funart_pro-p-oboi-fon-anime-devushki-28.jpg");
         }
     </style>
    
