--- a/ready/lesson3.html
+++ b/ready/lesson3.html
@@ -130,7 +130,7 @@
 
 <style>
         body {
-            background: url(https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcR_fDSUw7luA81Uw5s8bQ67vGdhJoP1ynIOZQ&usqp=CAU);
+            background: url(1618491900_26-funart_pro-p-oboi-fon-anime-devushki-28.jpg);
         }
     </style>
    
